# Crude-Oil-Intraday-Analysis---ML-based-model-for-price-predcition

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Crude Oil Analysis.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/crude_oil_analysis/: __init__.py  __main__.py  analysis.py  backtester.py  cli.py  config.py  forecaster.py  indicators.py  news.py  optional_deps.py  portfolio.py  reporting.py
tests/: conftest.py  test_cli.py  test_indicators.py  test_news.py  test_pipeline.py  test_portfolio.py
